<!-- <?xml version="1.0"?> -->
<package>
  <name>panda_gazebo</name>
  <version>1.0.0</version>
  <description>The panda_gazebo package for simulating the Panda 
    Robot from Franka Emika.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <!-- <url type="website"></url> -->
  <url type="repository">
    https://github.com/JustaGist/panda_simulator
  </url>

  <author email="sxs1412@bham.ac.uk"> Saif Sidhik </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>franka_core_msgs</build_depend>
  <build_depend>franka_tools</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libgazebo9-dev</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>panda_hardware_interface</build_depend>
  <build_depend>panda_sim_controllers</build_depend>
  <build_depend>panda_sim_custom_action_server</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>franka_core_msgs</run_depend>
  <run_depend>franka_tools</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>franka_panda_description</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>panda_hardware_interface</run_depend>
  <run_depend>panda_sim_controllers</run_depend>
  <run_depend>panda_sim_custom_action_server</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>nodelet</run_depend>


  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros_control plugin="${prefix}/panda_robot_hw_sim_plugins.xml"/>
  </export>
</package>
