<?xml version="1.0"?>
<package>
  <name>panda_sim_controllers</name>
  <version>1.0.0</version>
  <description>
    Panda-specific controllers for Gazebo use
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <url type="repository">
    https://github.com/Justagist/panda_simulator
  </url>

  <author email="sxs1412@bham.ac.uk"> Saif Sidhik </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>franka_core_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>panda_hardware_interface</build_depend>
  <build_depend>franka_gripper</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>effort_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>franka_gripper</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>franka_core_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>panda_hardware_interface</run_depend>

  <export>
    <controller_interface plugin="${prefix}/config/panda_sim_controllers_plugins.xml"/>
  </export>
</package>
