<?xml version="1.0"?>
<package>
  <name>panda_sim_custom_action_server</name>
  <version>1.0.0</version>
  <description>
    Custom action server for panda simulator
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <url type="repository">
    https://github.com/Justagist/panda_simulator
  </url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>franka_core_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>franka_interface</build_depend>
  <build_depend>panda_moveit_config</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>franka_core_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>franka_interface</run_depend>
  <run_depend>panda_moveit_config</run_depend>
  <run_depend>xacro</run_depend>

</package>
