<?xml version="1.0"?>
<package>
  <name>panda_simulator</name>
  <version>1.0.0</version>
  <description>
    Metapackage - Panda Robot Gazebo Simulation and Controllers
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <url type="repository">
    https://github.com/Justagist/panda_simulator
  </url>

  <author email="sxs1412@bham.ac.uk"> Saif Sidhik </author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>panda_gazebo</run_depend>
  <run_depend>panda_sim_controllers</run_depend>
  <run_depend>panda_simulator_examples</run_depend>
  <run_depend>panda_hardware_interface</run_depend>
  <export>
    <metapackage/>
  </export>

</package>
