<?xml version="1.0"?>
<package>
  <name>sawyer_gazebo</name>
  <version>5.2.0</version>
  <description>The sawyer_gazebo package for simulating the Sawyer 
    Robot from Rethink Robotics.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libgazebo7-dev</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sns_ik_lib</build_depend>
  <build_depend>sawyer_hardware_interface</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sawyer_description</run_depend>
  <run_depend>franka_panda_description</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>sawyer_hardware_interface</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>sns_ik_lib</run_depend>
  <run_depend>nodelet</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <gazebo_ros_control plugin="${prefix}/sawyer_robot_hw_sim_plugins.xml"/>
  </export>
</package>
