<?xml version="1.0"?>
<package>
  <name>sawyer_hardware_interface</name>
  <version>5.2.0</version>
  <description>The sawyer_hardware_interface package</description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>

</package>
