<?xml version="1.0"?>
<package>
  <name>sawyer_sim_controllers</name>
  <version>5.2.0</version>
  <description>
    Sawyer specific controllers for Gazebo use
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://sdk.rethinkrobotics.com/intera/</url>
  <url type="repository">
    https://github.com/RethinkRobotics/sawyer_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/sawyer_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sawyer_hardware_interface</build_depend>

  <run_depend>effort_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>sawyer_hardware_interface</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/config/sawyer_sim_controllers_plugins.xml"/>
  </export>
</package>
